Fix for gray margin on iphone5

--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -236,6 +236,10 @@ element.style {
     width: 100%;
     display: inline;
   }
+  .footer .col-md-12 {
+    max-width: 315px;
+    font-size: 15px;
+  }
 }
 
 #mc_embed_signup .mc-field-group input {
